# AmplificationMouvement

./: CMakeLists.txt  IIRFilter.cpp  IIRFilter.hpp  README.md  main.cpp
